添加客户端和服务端外层框架

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
             <version>${com.caucho.hessian.version}</version>
         </dependency>
 
-        <!--zookeeper-->
+        <!--framework.zookeeper-->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
