--- a/src/main/resources/invoker.properties
+++ b/src/main/resources/invoker.properties
@@ -1,6 +1,5 @@
-id=sayService
-appName=simple
-interface=com.simple.rpc.framework.test.service.SayService
+id=1
+appName=test
+interface=test.inter.Person
 clusterStrategy=WeightRandom
 timeout=2000
-groupName=default
