--- a/src/main/resources/service.properties
+++ b/src/main/resources/service.properties
@@ -1,9 +1,7 @@
-id=multiServiceRegister
-interface=com.simple.rpc.framework.test.service.MultiService
-ref=multiService
-weight=50
+id=1
+interface=test.inter.Person
+ref=sayImpl
 workerThreads=100
 serverPort=8082
 timeout=2000
-appName=simple
-groupName=default
+appName=test
