--- a/src/main/resources/invoker.properties
+++ b/src/main/resources/invoker.properties
@@ -1,5 +1,10 @@
+#invoker唯一id
 id=1
+#调用app名称
 appName=test
+#调用接口名称
 interface=test.inter.Person
+#负载均衡算法
 clusterStrategy=WeightRandom
+#超时
 timeout=2000
