--- a/src/main/resources/service.properties
+++ b/src/main/resources/service.properties
@@ -1,7 +1,12 @@
+#服务唯一ID
 id=1
+#服务接口名称
 interface=test.inter.Person
+#服务调用BeaniD
 ref=sayImpl
+#单个服务的最大负载连接
 workerThreads=100
+#服务端口
 serverPort=8082
-timeout=2000
+#服务app名称
 appName=test
